@@ -49,7 +49,9 @@
  */
 package org.onelab.filter;
 
+import org.apache.hadoop.hbase.util.Hash;
 import org.apache.hadoop.hbase.util.JenkinsHash;
+import org.apache.hadoop.hbase.util.MurmurHash;
 
 /**
  * Implements a hash object that returns a certain number of hashed values.
@@ -65,21 +67,25 @@ import org.apache.hadoop.hbase.util.JenkinsHash;
  * 
  * @see <a href="http://www.itl.nist.gov/fipspubs/fip180-1.htm">SHA-1 algorithm</a>
  */
-public final class HashFunction{
+public final class HashFunction {
   /** The number of hashed values. */
   private int nbHash;
 
   /** The maximum highest returned value. */
   private int maxValue;
 
+  /** Hashing algorithm to use. */
+  private Hash hashFunction;
+  
   /**
    * Constructor.
    * <p>
    * Builds a hash function that must obey to a given maximum number of returned values and a highest value.
    * @param maxValue The maximum highest returned value.
    * @param nbHash The number of resulting hashed values.
+   * @param hashType type of the hashing function (see {@link Hash}).
    */
-  public HashFunction(int maxValue, int nbHash) {
+  public HashFunction(int maxValue, int nbHash, int hashType) {
     if(maxValue <= 0) {
       throw new IllegalArgumentException("maxValue must be > 0");
     }
@@ -90,6 +96,9 @@ public final class HashFunction{
 
     this.maxValue = maxValue;
     this.nbHash = nbHash;
+    this.hashFunction = Hash.getInstance(hashType);
+    if (this.hashFunction == null)
+      throw new IllegalArgumentException("hashType must be known");
   }//end constructor
 
   /** Clears <i>this</i> hash function. A NOOP */
@@ -112,7 +121,7 @@ public final class HashFunction{
       }
       int[] result = new int[nbHash];
       for (int i = 0, initval = 0; i < nbHash; i++) {
-        initval = result[i] = Math.abs(JenkinsHash.hash(b, initval) % maxValue);
+        initval = result[i] = Math.abs(hashFunction.hash(b, initval) % maxValue);
       }
       return result;
   }//end hash() 
