@@ -19,6 +19,8 @@ Release 0.19.0 - Unreleased
                (Doğacan Güney via Stack)
 
   NEW FEATURES
+   HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
+               (Andrzej Bialecki via Stack)
 
   OPTIMIZATIONS
    HBASE-887   Fix a hotspot in scanners
